# my-ag-ui-app

./: .gitignore  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/agent/: main.py  package.json  pyproject.toml
apps/agent-custom/: .env.example  main.py  package.json  pyproject.toml
apps/agent-custom/app/: checkpointer.py  main.py
apps/agent-custom/app/agent/: graph.py  nodes.py  state.py
apps/app/: package.json
apps/app/src/app/: layout.tsx
apps/app/src/app/api/copilotkit/: ag-ui-middleware.ts  route.ts
apps/app/src/hooks/: use-example-suggestions.tsx  use-generative-ui-examples.tsx
