[project]
name = "agent-custom"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-langgraph>=0.0.26",
    "copilotkit>=0.1.79",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "langchain-core>=1.2.19",
    "langchain-openai>=1.1.11",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.3",
    "uvicorn>=0.41.0",
]
